Fix unread line becoming invisible on Halloween theme.

--- a/src/css/spooky.css
+++ b/src/css/spooky.css
@@ -149,6 +149,8 @@
 /* Unread */
 :root.spooky .unread-line {
   border-color: rgb(197, 200, 198);
+  visibility: visible;
+  opacity: 1;
 }
 
 /* Thread Watcher */
